# wiremind-kubernetes

./: .gitignore  .gitlab-ci-common-libraries.yml  .gitlab-ci.yml  .safety-policy.yml  CHANGELOG.md  CustomResourceDefinition-expecteddeploymentscales.yaml  README.md  VERSION  cog.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  compliance.yml  python-publish.yml  python-test.yml
documentation/: schema-stop-pods.xml
src/wiremind_kubernetes/: __init__.py  exceptions.py  kube_config.py  kubernetes_client_additional_arguments.py  kubernetes_helper.py  utils.py
src/wiremind_kubernetes/tests/: utils_tests.py
src/wiremind_kubernetes/tests/e2e_tests/: conftest.py  create_job_test.py  helpers.py  integration_tests.py  start_stop_test.py
src/wiremind_kubernetes/tests/unit_tests/: kube_config_test.py  kubernetes_client_additional_arguments_test.py  kubernetes_deployment_manager_test.py  namespaced_kubernetes_helper_test.py  utils_test.py  utils_tests.py
typings/kubernetes/: __init__.pyi
typings/kubernetes/client/: __init__.pyi  api_client.pyi  configuration.pyi  exceptions.pyi  rest.pyi
typings/kubernetes/client/api/: admissionregistration_api.pyi  admissionregistration_v1_api.pyi  apiextensions_api.pyi  apiextensions_v1_api.pyi  apiregistration_api.pyi  apiregistration_v1_api.pyi  apis_api.pyi  apps_api.pyi  apps_v1_api.pyi  authentication_api.pyi  authentication_v1_api.pyi  authorization_api.pyi  authorization_v1_api.pyi  autoscaling_api.pyi  autoscaling_v1_api.pyi  autoscaling_v2_api.pyi  autoscaling_v2beta1_api.pyi  autoscaling_v2beta2_api.pyi  batch_api.pyi  batch_v1_api.pyi  batch_v1beta1_api.pyi  certificates_api.pyi  certificates_v1_api.pyi  coordination_api.pyi  coordination_v1_api.pyi  core_api.pyi  core_v1_api.pyi  custom_objects_api.pyi  discovery_api.pyi  discovery_v1_api.pyi  discovery_v1beta1_api.pyi  events_api.pyi  events_v1_api.pyi  events_v1beta1_api.pyi  flowcontrol_apiserver_api.pyi  flowcontrol_apiserver_v1beta1_api.pyi  flowcontrol_apiserver_v1beta2_api.pyi  internal_apiserver_api.pyi  internal_apiserver_v1alpha1_api.pyi  logs_api.pyi  (+18 more)
typings/kubernetes/client/models/: __init__.pyi  admissionregistration_v1_service_reference.pyi  admissionregistration_v1_webhook_client_config.pyi  apiextensions_v1_service_reference.pyi  apiextensions_v1_webhook_client_config.pyi  apiregistration_v1_service_reference.pyi  authentication_v1_token_request.pyi  core_v1_endpoint_port.pyi  core_v1_event.pyi  core_v1_event_list.pyi  core_v1_event_series.pyi  discovery_v1_endpoint_port.pyi  events_v1_event.pyi  events_v1_event_list.pyi  events_v1_event_series.pyi  storage_v1_token_request.pyi  v1_affinity.pyi  v1_aggregation_rule.pyi  v1_api_group.pyi  v1_api_group_list.pyi  v1_api_resource.pyi  v1_api_resource_list.pyi  v1_api_service.pyi  v1_api_service_condition.pyi  v1_api_service_list.pyi  v1_api_service_spec.pyi  v1_api_service_status.pyi  v1_api_versions.pyi  v1_attached_volume.pyi  v1_aws_elastic_block_store_volume_source.pyi  v1_azure_disk_volume_source.pyi  v1_azure_file_persistent_volume_source.pyi  v1_azure_file_volume_source.pyi  v1_binding.pyi  v1_bound_object_reference.pyi  v1_capabilities.pyi  v1_ceph_fs_persistent_volume_source.pyi  v1_ceph_fs_volume_source.pyi  v1_certificate_signing_request.pyi  (+513 more)
typings/kubernetes/config/: __init__.pyi  config_exception.pyi  dateutil.pyi  exec_provider.pyi  incluster_config.pyi  kube_config.pyi
typings/kubernetes/dynamic/: __init__.pyi  client.pyi  discovery.pyi  exceptions.pyi  resource.pyi
typings/kubernetes/stream/: __init__.pyi  stream.pyi  ws_client.pyi
typings/kubernetes/utils/: __init__.pyi  create_from_yaml.pyi  quantity.pyi
typings/kubernetes/watch/: __init__.pyi  watch.pyi
(+6 files in other folders)
