[options]
python_requires = >= 3.7

[flake8]
max-line-length = 120
# Enable flake8-mutable
enable-extensions = M511
# W503 line break before binary operator. Black causes this error
# E203 whitespace before ':'
# E231 missing whitespace after ','. Black causes this error but seems to be right (see pep8)
# E501 line too long
# Q000 Double quotes found but single quotes preferred
ignore = W503, E203, E231, E501, Q000
jobs = 4

[mypy]
python_version = 3.7
ignore_missing_imports = True
check_untyped_defs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
no_implicit_optional = True
show_error_codes = True
files = src

[isort]
src_paths = src,tests
profile = black
line_length = 120
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = LOCALFOLDER
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_grid_wrap = 0

[tool:pytest]
log_level=INFO
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
    ignore::pytest.PytestUnknownMarkWarning
